--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Hello World</h1>
     <p>How's it going?</p>
+    <a href="/R-Olivaw.github.io/testpage.html">A link</a>
 </body>
 </html>
