--- a/testpage.html
+++ b/testpage.html
@@ -8,7 +8,9 @@
     <title>Test page</title>
 </head>
 <body>
-    <h1>Test page</h1>
-    <p>A page of test.</p>
+    <div class="container">
+        <h1>Test page</h1>
+        <p>A page of test.</p>
+    </div>
 </body>
 </html>
