--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1 class="test-class-z">Hello, world!</h1>
-    <p class="ass">This is ass.</p>
+    <div class="container">
+      <h1 class="test-class-z">Hello, world!</h1>
+      <p class="ass">This is ass.</p>
+    </div>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
