--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
         <h1 class="red">Hello World</h1>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        <div class="card" style="width:100%;">
+          <img src="images/card_images/uranium-glass-skeleton.png" alt="A green, uranium glass skeleton glowing the dark." class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Card Title</h5>
+            <p class="card-text">Something goes here. Probably a description or something like that.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-4 col-lg-4">
+
+      </div>
+      <div class="col-sm-4 col-md-4 col-lg-4">
+
+      </div>
+    </div>
   </div>
 
 </body>
