--- a/index.html
+++ b/index.html
@@ -38,16 +38,28 @@
         <div class="card" style="width:100%;">
           <img src="images/card_images/uranium-glass-skeleton.png" alt="A green, uranium glass skeleton glowing the dark." class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Card Title</h5>
+            <h5 class="card-title">Uranium Glass Skeleton</h5>
             <p class="card-text">Something goes here. Probably a description or something like that.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4">
-
+        <div class="card" style="width:100%;">
+          <img src="images/card_images/uranium-glass-giant.png" alt="A green, uranium glass skeleton glowing the dark." class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Uranium Glass giant</h5>
+            <p class="card-text">Something goes here. Probably a description or something like that.</p>
+          </div>
+        </div>
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4">
-
+        <div class="card" style="width:100%;">
+          <img src="images/card_images/uranium-glass-crypt.png" alt="A green, uranium glass skeleton glowing the dark." class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Uranium Glass Crypt</h5>
+            <p class="card-text">Something goes here. Probably a description or something like that.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
