--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 class="red">Hello World</h1>
+        <h1>Hello World</h1>
       </div>
     </div>
 
