--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="card-body">
             <h5 class="card-title">Uranium Glass Skeleton</h5>
             <p class="card-text">Something goes here. Probably a description or something like that.</p>
-            <a href="https://www.midjourney.com/app/jobs/ac0ac2c9-2a3a-4e9b-9e41-49a3ed3da77d/" class="btn btn-primary">View Original</a>
+            <a href="https://www.midjourney.com/app/jobs/ac0ac2c9-2a3a-4e9b-9e41-49a3ed3da77d/" target="_blank" class="btn btn-primary">View Original</a>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
           <div class="card-body">
             <h5 class="card-title">Uranium Glass giant</h5>
             <p class="card-text">Something goes here. Probably a description or something like that.</p>
-            <a href="https://www.midjourney.com/app/jobs/ed658044-e31e-494e-8c5d-0fcde070c1a7/" class="btn btn-primary">View Original</a>
+            <a href="https://www.midjourney.com/app/jobs/ed658044-e31e-494e-8c5d-0fcde070c1a7/" target="_blank" class="btn btn-primary">View Original</a>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
           <div class="card-body">
             <h5 class="card-title">Uranium Glass Crypt</h5>
             <p class="card-text">Something goes here. Probably a description or something like that.</p>
-            <a href="https://www.midjourney.com/app/jobs/9469125f-888b-43ea-8b16-ab985d75e03d/" class="btn btn-primary">View Original</a>
+            <a href="https://www.midjourney.com/app/jobs/9469125f-888b-43ea-8b16-ab985d75e03d/" target="_blank" class="btn btn-primary">View Original</a>
           </div>
         </div>
       </div>
