add about content

--- a/about.html
+++ b/about.html
@@ -31,6 +31,15 @@
             <h1 style="text-align: center;">About</h1>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-9 col-md-9 col-lg-9">
+            <h5>Subheader Subheader</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit perferendis esse odit nobis ducimus consectetur, dolorum impedit temporibus optio vitae, deserunt quos, illo repellendus molestias soluta voluptate vero sit. Fugiat?</p>
+        </div>
+        <div class="col-sm-3 col-md-3 col-lg-3">
+            
+        </div>
+    </div>
   </div>
 
 </body>
